<resources>
    <string name="app_name">QuizAdmin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_category">Add Category</string>
    <string name="add_question">Add question</string>
    <string name="correctAnswer">Answer</string>
    <string name="delete_question">Delete question</string>
    <string name="display_question">Display Question</string>
    <string name="enterQuestion">Please enter your question</string>
    <string name="enterAllOptions">Please enter all the options</string>
    <string name="markCorrectAnswer">Choose correct answer</string>
    <string name="enterCategory">Enter Category of the question</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="show_category">Show Category</string>
    <string name="typeQuestionsHere">Type your questions here</string>
    <string name="update_question">Update question</string>
    <string name="deleteSelectedQuestion">"Do you want to delete this Question?"</string>
    <string name="deleteSelectedCategory">"Do you want to delete"</string>


    <string-array name="options_entries">
        <item>Answer</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="options_Categories">
        <item>Category</item>
    </string-array>

</resources>
