<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/both_match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/both_match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_home_add_question"
            style="@style/width_match_parent"
            android:text="@string/add_question" />

        <Button
            android:id="@+id/btn_home_display_question"
            style="@style/width_match_parent"
            android:text="@string/display_question" />

        <Button
            android:id="@+id/btn_home_add_category"
            style="@style/width_match_parent"
            android:text="@string/add_category" />

        <Button
            android:id="@+id/btn_home_show_category"
            style="@style/width_match_parent"
            android:text="@string/show_category" />

    </LinearLayout>
</LinearLayout>