<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/both_match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_question"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:imeOptions="actionNext"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:hint="@string/typeQuestionsHere"
            android:inputType="text|textImeMultiLine" />

        <LinearLayout
            style="@style/both_match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="@string/option1" />

            <EditText
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="@string/option2" />

            <EditText
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="@string/option3" />

            <EditText
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="@string/option4" />
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"

              >

              <Spinner
                  android:id="@+id/correctAnsrSpinner"
                  android:layout_width="wrap_content"
                  android:layout_height="40dp"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:autofillHints="Category"
                  android:entries="@array/options_entries"
                    android:layout_alignParentLeft="true"
                  ></Spinner>

              <Spinner
                  android:id="@+id/spinnerQuestionCateg"
                  android:layout_width="wrap_content"
                  android:layout_height="40dp"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:autofillHints="Answer"
                  android:entries="@array/options_Categories"
                  android:layout_alignParentRight="true"
                  ></Spinner>
          </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addQuestionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_question" />
    </LinearLayout>

</LinearLayout>

